# Canopy

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  QUICKSTART.md  README.md  opencode.json  package-lock.json  package.json
apps/backend/: .env.example  alembic.ini  app.py  control_plane.sqlite3  pyproject.toml  reset_db.py  reset_test_dbs.py  seed_user.py  tenant_data.sqlite3  test_payroll.xlsx
apps/backend/alembic/: env.py
apps/backend/analytics/: departments.py  domain.py  schema.py  service.py
apps/backend/anomalies/: domain.py  repository.py  schema.py  service.py  severity.py
apps/backend/auth/: domain.py  repository.py  schema.py  service.py
apps/backend/backup/: backup_engine.py  clone_engine.py  domain.py  errors.py  lifecycle_validation.py  policy_manager.py  restore_engine.py  service.py
apps/backend/cache/: cache_store.py  config_cache.py  hooks.py  invalidation.py  routing_cache.py
apps/backend/common/: _all_models.py  clock.py  config.py  database.py  errors.py  executor.py  logging.py
apps/backend/connection/: _shared.py  cursor_detection.py  database_adapter.py  domain.py  importer.py  materialization.py  preview.py  repository.py  schema.py  secret_store.py  service.py
apps/backend/connector/: __init__.py  domain.py  repository.py  schema.py  service.py
apps/backend/context/: authorization.py  membership_validator.py  tenant_context.py
apps/backend/control_plane/: admin_router.py  audit_service.py  config_repository.py  lifecycle_service.py  membership_repository.py  provisioning_service.py  tenant_repository.py
apps/backend/dataset/: cleaning.py  domain.py  preview_service.py  repository.py  schema.py  service.py
apps/backend/entity_detail/: __init__.py  field_model.py  service.py
apps/backend/entity_formula_engine/: __init__.py  engine.py
apps/backend/entity_lineage/: __init__.py  domain.py  graph_builder.py
apps/backend/entity_link_resolver/: __init__.py  service.py
apps/backend/entity_materialization/: domain.py  repository.py  schema.py  service.py
apps/backend/entity_revision/: deprecation_service.py  domain.py  recovery_service.py  repository.py  schema.py  service.py
apps/backend/exports/: domain.py  payload.py  presets.py  repository.py  schema.py  service.py
apps/backend/feature_flags/: domain.py  repository.py  schema.py  service.py
apps/backend/health/: domain.py  repository.py  schema.py  service.py
apps/backend/ingestion/: cleaning.py  engine.py  landing_guard.py  lineage.py  normalization.py  orchestration.py  profiling.py  publish.py  repository.py  schema.py  service.py  templates.py
apps/backend/insights/: __init__.py  domain.py  facts.py  fallback.py  llm_client.py  parser.py  prompt_builder.py  repository.py  schema.py  service.py
apps/backend/job_queue/: job_registry.py  tenant_queue.py
apps/backend/lineage/: metadata_service.py
apps/backend/object_storage/: access_guard.py  adapter.py  errors.py  key_generator.py  local_adapter.py  s3_adapter.py  service.py
apps/backend/ontology/: __init__.py  domain.py  schema.py
apps/backend/project/: domain.py  repository.py  schema.py  service.py
apps/backend/quotas/: domain.py  enforcer.py  errors.py  evaluator.py  registry.py  usage_tracker.py
apps/backend/refresh/: domain.py  repository.py  schema.py  service.py
apps/backend/retention/: domain.py  repository.py  schema.py  service.py
apps/backend/run/: domain.py  repository.py  schema.py  service.py
apps/backend/schema_drift/: domain.py  repository.py  schema.py  service.py
apps/backend/scripts/: migrate_v1_types_to_entities.py  seed_demo_tenant.py  seed_demo_user.py
apps/backend/semantic/: aggregation_service.py  domain.py  entity_registry.py  repository.py  schema.py  schema_service.py  service.py  validation.py
apps/backend/source_type/: domain.py  repository.py  schema.py  service.py
apps/backend/sync/: domain.py  external_sync_service.py  schema.py  source_db.py
apps/backend/tenant_data/: _all_models.py  base.py  migration_pipeline.py  rls.py  storage_router.py  tenant_aware_query.py
(+856 files in other folders)
