[project]
name = "herd-aggregator-backend"
version = "0.1.0"
description = "HERD Aggregator backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openpyxl>=3.1.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "alembic>=1.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "auth*", "sync*", "ontology*", "analytics*", "anomalies*", "insights*", "exports*", "refresh*", "common*", "alembic*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "unit: Tests that run without DB/network (pure logic)",
    "integration: Tests that use DB or network fixtures",
    "business_rule: Core business-logic tests that must never regress",
    "api_schema: API response contract and schema tests",
    "smoke: End-to-end smoke tests",
]

[tool.coverage.run]
source = ["analytics", "anomalies", "sync", "ontology", "insights", "exports", "refresh", "common", "auth"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
precision = 1
